# stable-diffusion.cpp-Mediatek

.github/: trigger_manual_build.txt
.github/workflows/: build-apk.yml
android-app/app/src/main/cpp/: CMakeLists.txt  _include_model_loader.cpp  _include_native_headers.h  jni_model_bridge.cpp  json_dependency_stub.json  native_metadata.json
